# selir

./: .gitignore  CMakeLists.txt  Makefile  README.md  rebuild.sh
cmake/: FindKernelHeaders.cmake
headers/api/: bloom_filter.h  check_srv6.h  ftrace_hook_api.h  hook_functions_api.h  netlink_handler.h  netlink_router.h  option_resolver.h  test.h
headers/hooks/inet_sendmsg/: inet_sendmsg.h
headers/hooks/ip6_rcv_finish_core/: ip6_rcv_finish_core.h
headers/hooks/ip_append_data/: ip_append_data.h
headers/hooks/ip_make_skb/: ip_make_skb.h
headers/hooks/ip_send_skb/: ip_send_skb.h
headers/hooks/ip_setup_cork/: ip_setup_cork.h
headers/hooks/ipv6_rcv_finish/: ipv6_rcv_finish.h
headers/hooks/network_layer/ipv4/ip_append_data/: ip_append_data.h
headers/hooks/network_layer/ipv4/ip_flush_pending_frames/: ip_flush_pending_frames.h
headers/hooks/network_layer/ipv4/ip_local_deliver/: ip_local_deliver.h
headers/hooks/network_layer/ipv4/ip_local_out/: ip_local_out.h
headers/hooks/network_layer/ipv4/ip_make_skb/: ip_make_skb.h
headers/hooks/network_layer/ipv4/ip_output/: ip_output.h
headers/hooks/network_layer/ipv4/ip_packet_forward/: ip_packet_forward.h
headers/hooks/network_layer/ipv4/ip_rcv/: ip_rcv.h
headers/hooks/network_layer/ipv4/ip_send_check/: ip_send_check.h
headers/hooks/network_layer/ipv4/ip_send_skb/: ip_send_skb.h
headers/hooks/network_layer/ipv4/ip_setup_cork/: ip_setup_cork.h
headers/hooks/network_layer/ipv6/ipv6_rcv/: ipv6_rcv.h
headers/hooks/tcp_v4_rcv/: tcp_v4_rcv.h
headers/hooks/transport_layer/tcp/tcp_rcv_established/: tcp_rcv_established.h
headers/hooks/transport_layer/tcp/tcp_v4_do_rcv/: tcp_v4_do_rcv.h
headers/hooks/transport_layer/udp/udp_rcv/: udp_rcv.h
headers/hooks/transport_layer/udp/udp_send_skb/: udp_send_skb.h
headers/hooks/transport_layer/udp/udp_sendmsg/: udp_sendmsg.h
headers/hooks/udp_send_skb/: udp_send_skb.h
headers/hooks/udp_sendmsg/: udp_sendmsg.h
headers/prepare/: resolve_function_address.h
headers/structure/: bloom_filter.h  crypto_structure.h  destination_info.h  hash_table.h  interface_table.h  interface_table_entry.h  namespace.h  path_validation_header.h  path_validation_sock_structure.h  path_validation_structure.h  source_routing_table.h  source_routing_table_entry.h
headers/structure/crypto/: bloom_filter.h  crypto_structure.h
headers/structure/header/: common_part.h  fast_selir_header.h  icing_header.h  lir_header.h  multicast_session_header.h  opt_header.h  selir_header.h  session_header.h  tools.h
headers/structure/interface/: interface_table.h
headers/structure/namespace/: namespace.h
headers/structure/routing/: array_based_routing_table.h  destination_info.h  hash_based_routing_table.h  routing_calc_res.h  routing_table_entry.h  user_space_info.h  variables.h
headers/structure/session/: session_table.h
headers/tools/: hook_utils.h  tools.h
src/: module_starter.c
src/api/: bloom_filter.c  check_srv6.c  ftrace_hook_api.c  hook_functions_api.c  netlink_handler.c  netlink_router.c  option_resolver.c  test.c
src/hooks/inet_sendmsg/: hook.c  impl.c
src/hooks/ip6_rcv_finish_core/: impl.c
src/hooks/ip_append_data/: impl.c
src/hooks/ip_make_skb/: impl.c
src/hooks/ip_send_skb/: impl.c
src/hooks/ip_setup_cork/: impl.c
src/hooks/ipv6_rcv/: hook.c  impl.c
src/hooks/ipv6_rcv_finish/: impl.c
src/hooks/network_layer/ipv4/ip_append_data/: impl.c
src/hooks/network_layer/ipv4/ip_flush_pending_frames/: impl.c
src/hooks/network_layer/ipv4/ip_local_deliver/: impl.c
src/hooks/network_layer/ipv4/ip_local_out/: impl.c
src/hooks/network_layer/ipv4/ip_make_skb/: icing_make_skb.c  impl.c  lir_make_skb.c  multicast_selir_make_skb.c  multicast_session_make_skb.c  opt_make_skb.c  selir_fast_make_skb.c  selir_make_skb.c  session_make_skb.c
src/hooks/network_layer/ipv4/ip_output/: impl.c
src/hooks/network_layer/ipv4/ip_packet_forward/: impl.c
src/hooks/network_layer/ipv4/ip_rcv/: fast_selir_rcv.c  hook.c  icing_rcv.c  impl.c  lir_rcv.c  multicast_selir_rcv.c  multicast_session_rcv.c  opt_rcv.c  selir_rcv.c  session_rcv.c
src/hooks/network_layer/ipv4/ip_send_check/: impl.c
src/hooks/network_layer/ipv4/ip_send_skb/: impl.c
src/hooks/network_layer/ipv4/ip_setup_cork/: impl.c
src/hooks/network_layer/ipv6/ip6_rcv_finish_core/: impl.c
src/hooks/network_layer/ipv6/ipv6_rcv/: hook.c  impl.c
src/hooks/network_layer/ipv6/ipv6_rcv_finish/: impl.c
src/hooks/tcp_rcv_established/: impl.c
src/hooks/tcp_v4_do_rcv/: impl.c
src/hooks/tcp_v4_rcv/: hook.c  impl.c
src/hooks/transport_layer/tcp/tcp_rcv_established/: impl.c
src/hooks/transport_layer/tcp/tcp_v4_rcv/: hook.c  (+1 more)
src/hooks/udp_send_skb/: impl.c
src/hooks/udp_sendmsg/: hook.c  impl.c
src/prepare/: resolve_function_address.c
src/structure/: bloom_filter.c  crypto_structure.c  destination_info.c  hash_table.c  interface_table.c  namespace.c  path_validation_header.c  path_validation_sock_structure.c  path_validation_structure.c  source_routing_table.c  source_routing_table_entry.c
src/structure/crypto/: bloom_filter.c  crypto_structure.c
src/structure/header/: fast_selir_header.c  icing_header.c  lir_header.c  opt_header.c  selir_header.c  tools.c
src/structure/interface/: interface_table.c
src/structure/namespace/: namespace.c
src/structure/routing/: array_based_routing_table.c  destination_info.c  hash_based_routing_table.c  routing_calc_res.c  routing_table_entry.c  user_space_info.c
src/structure/session/: session_table.c
src/tools/: tools.c
(+5 files in other folders)
